--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,19 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Dependencies
+/node_modules
+/frontend/node_modules
+/backend/node_modules
+
+# Environment variables
+.env
+frontend/.env
+backend/.env
+
+# Build files
+/frontend/dist
+
+# Other
+.DS_Store
