--- a/backend/package.json
+++ b/backend/package.json
@@ -15,11 +15,17 @@
     "@google-cloud/aiplatform": "^4.2.0",
     "@google-cloud/vertexai": "^1.10.0",
     "@google/generative-ai": "^0.24.1",
+    "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
     "canvas": "^3.1.2",
     "cors": "^2.8.5",
-    "dotenv": "^17.0.0",
+    "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "express-validator": "^7.2.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.17.0",
+    "multer": "^2.0.2",
+    "nodemailer": "^7.0.5",
     "pdfjs-dist": "^5.3.31"
   }
 }
